<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Peak Response</string>
    <!-- description -->
    <string name="app_desc">Peak Response is a real-time MCI coordination and situational awareness tool for EMS responders on and off the scene.</string>

    <string name="button_ok">OK</string>
    <string name="button_submit">Submit</string>

    <string name="map_group_friendly_name">Peak Response Group</string>

    <string name="menu_logout">Log out</string>

    <string name="mcis_empty">No active MCIs.</string>

    <string name="priority_all">Total</string>
    <string name="priority_red">Immediate</string>
    <string name="priority_yellow">Delayed</string>
    <string name="priority_green">Minor</string>
    <string name="priority_zebra">Dead</string>

    <string name="scene_overview_estimated">Estim.</string>
    <string name="scene_overview_tagged">Tagged</string>
    <string name="scene_overview_transported">Transp.</string>

    <string name="tab_events">Events</string>
    <string name="tab_mcis">MCIs</string>
    <string name="tab_patient_counts">Patient Counts</string>
    <string name="tab_settings">Settings</string>

    <string name="main_email">Email:</string>
    <string name="main_password">Password:</string>
    <string name="invalid_credentials">Invalid email and/or password.</string>
</resources>
